Tweaked user profile history tables so solves don't show on small screens.

--- a/app/static/less/user.less
+++ b/app/static/less/user.less
@@ -1,6 +1,6 @@
 .tab-event-image {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     -webkit-filter: saturate(0%) brightness(1.40);
     filter: saturate(0%) brightness(1.40);
 }
@@ -8,6 +8,15 @@
 .pb-indicator {
     font-weight: bold;
     color: red;
+}
+
+.profile-container {
+    min-height: 100%;
+    margin-top: 15px;
+}
+
+.nav-link {
+    padding: 8px;
 }
 
 .event_name_row th {
